<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:background="@color/blue_fundo"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.NoteDialogFragment">

    <ImageButton
        android:id="@+id/imagebutton_dialognotes_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_close_24"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:background="@color/fui_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textinputlayout_dialognotes_title"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_dialognotes_title"
        style="@style/textInputLayoutSemBorda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:boxBackgroundColor="@color/blue_fundo"
        android:hint="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagebutton_dialognotes_close"
        app:layout_constraintBottom_toTopOf="@+id/textinputlayout_dialognotes_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_dialognotes_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_dialognotes_description"
        style="@style/CustomOutlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_addnote"
        app:layout_constraintTop_toBottomOf="@+id/textinputlayout_dialognotes_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_dialognotes_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_addnote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:icon="@drawable/ic_action_check_24"
        app:iconGravity="start"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinputlayout_dialognotes_description"/>


</androidx.constraintlayout.widget.ConstraintLayout>